# scrim-bot

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-checks.yml
docs/: schema.dbml
src/: bot.py
src/cogs/: admin.py  data.py  games.py  general.py  teams.py  users.py  utils.py
src/models/: __init__.py  admin.py  game.py  league.py  match.py  team.py  user.py
src/utils/: __init__.py  database.py  discord_bot.py  logging.py
workflows/: code-checks.yml
