[project]
name = "scrim-bot"
version = "0.1.0"
description = "A Discord Bot designed to assist competitive teams with organising and challenging other teams to practice scrims or matches"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Voltstriker" }
]
dependencies = [
    "discord.py>=2.6.4",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["black", "pylint", "pyright"]

[project.urls]
Homepage = "https://github.com/Voltstriker/scrim-bot"
Repository = "https://github.com/Voltstriker/scrim-bot"
Issues = "https://github.com/Voltstriker/scrim-bot/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 150
target-version = ["py311"]
include = '\.pyi?$'

[tool.pylint.main]
py-version = "3.11"
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.mccabe",
]

[tool.pylint.basic]
accept-no-param-doc = false
accept-no-raise-doc = false
accept-no-return-doc = false
accept-no-yields-doc = false
default-docstring-type = "numpy"

[tool.pylint.format]
max-line-length = 150

[tool.pylint.messages_control]
disable = [
    "C0199",
    "C0411",
    "W0718",
    "C0103",
    "R0801",
    "R1260",
    "R0911",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R0917",
    "C0302"
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
